--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 14:07+0200\n"
+"PO-Revision-Date: 2011-08-05 14:08+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10169,7 +10169,7 @@ msgstr ""
 
 #: setup/frames/index.inc.php:157
 msgid "New server"
-msgstr ""
+msgstr "새 서버"
 
 #: setup/frames/index.inc.php:186
 msgid "Default language"
