--- a/po/ko.po
+++ b/po/ko.po
@@ -10113,7 +10113,7 @@ msgstr ""
 
 #: setup/frames/config.inc.php:38 setup/frames/index.inc.php:226
 msgid "Download"
-msgstr ""
+msgstr "다운로드"
 
 #: setup/frames/index.inc.php:49
 msgid "Cannot load or save configuration"
