--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 14:10+0200\n"
+"PO-Revision-Date: 2011-08-05 14:12+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10016,7 +10016,7 @@ msgstr ""
 
 #: server_synchronize.php:399 server_synchronize.php:825
 msgid "Data Difference"
-msgstr ""
+msgstr "차이나는 데이터"
 
 #: server_synchronize.php:404 server_synchronize.php:830
 msgid "Add column(s)"
