--- a/po/ko.po
+++ b/po/ko.po
@@ -10052,7 +10052,7 @@ msgstr "대상 테이블에서 이전 행들을 모두 삭제하시겠습니까?
 
 #: server_synchronize.php:423 server_synchronize.php:851
 msgid "Apply Selected Changes"
-msgstr ""
+msgstr "선택한 변경내용 적용"
 
 #: server_synchronize.php:425 server_synchronize.php:853
 msgid "Synchronize Databases"
