--- a/po/ko.po
+++ b/po/ko.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-05 14:14+0200\n"
+"PO-Revision-Date: 2011-08-05 14:15+0200\n"
 "Last-Translator: Chung-Ook Lee <hantip@gmail.com>\n"
 "Language-Team: korean <ko@li.org>\n"
 "Language: ko\n"
@@ -10056,7 +10056,7 @@ msgstr "선택한 변경내용 적용"
 
 #: server_synchronize.php:425 server_synchronize.php:853
 msgid "Synchronize Databases"
-msgstr ""
+msgstr "데이터베이스 동기화"
 
 #: server_synchronize.php:438
 msgid "Selected target tables have been synchronized with source tables."
