--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-06 11:07+0200\n"
+"PO-Revision-Date: 2011-08-06 11:09+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2279,10 +2279,9 @@ msgid "PBMS get BLOB info failed:"
 msgstr "PBMS, BLOB bilgisi alması başarısız:"
 
 #: libraries/blobstreaming.lib.php:332
-#, fuzzy
 #| msgid "get BLOB Content-Type failed"
 msgid "PBMS get BLOB Content-Type failed"
-msgstr "BLOB İçerik Türü alma başarısız"
+msgstr "PBMS, BLOB İçerik Türü alması başarısız"
 
 #: libraries/blobstreaming.lib.php:358
 msgid "View image"
