--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-06 11:26+0200\n"
+"PO-Revision-Date: 2011-08-06 11:27+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -1187,7 +1187,7 @@ msgstr ""
 
 #: js/messages.php:109
 msgid "Used Swap"
-msgstr ""
+msgstr "使用中スワップ領域"
 
 #: js/messages.php:110
 #| msgid "Free pages"
