Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-06 11:32+0200\n"
+"PO-Revision-Date: 2011-08-06 11:39+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -1194,7 +1194,7 @@ msgstr "空きスワップ領域"
 
 #: js/messages.php:112
 msgid "Bytes sent"
-msgstr ""
+msgstr "送信"
 
 #: js/messages.php:113
 #, fuzzy
