--- a/po/ja.po
+++ b/po/ja.po
@@ -1197,10 +1197,9 @@ msgid "Bytes sent"
 msgstr "送信"
 
 #: js/messages.php:113
-#, fuzzy
 #| msgid "Received"
 msgid "Bytes received"
-msgstr "受信済"
+msgstr "受信"
 
 #: js/messages.php:114 server_status.php:991
 msgid "Connections"
