Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-06 11:39+0200\n"
+"PO-Revision-Date: 2011-08-06 11:58+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -4571,7 +4571,7 @@ msgstr "パスワード変更フォームの表示"
 
 #: libraries/config/messages.inc.php:452
 msgid "Show create database form"
-msgstr "「新規データベース作成」部分を表示する"
+msgstr "「データベースを作成する」の部分を表示する"
 
 #: libraries/config/messages.inc.php:453
 msgid ""
