Translation update done using Pootle.

--- a/po/ja.po
+++ b/po/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-06 11:58+0200\n"
+"PO-Revision-Date: 2011-08-06 11:59+0200\n"
 "Last-Translator: Yuichiro <yuichiro@pop07.odn.ne.jp>\n"
 "Language-Team: japanese <jp@li.org>\n"
 "Language: ja\n"
@@ -1986,7 +1986,8 @@ msgid ""
 "Error moving the uploaded file, see [a@./Documentation."
 "html#faq1_11@Documentation]FAQ 1.11[/a]"
 msgstr ""
-"アップロードされたファイルの移動に失敗しました。FAQ 1.11 をご覧ください。"
+"アップロードされたファイルの移動に失敗しました。[a@./Documentation.html#faq1_11@Documentation]FAQ "
+"1.11[/a] をご覧ください。"
 
 #: libraries/File.class.php:507
 msgid "Error while moving uploaded file."
