--- a/po/ar.po
+++ b/po/ar.po
@@ -1159,10 +1159,9 @@ msgid "Total memory"
 msgstr "إجمالي الذاكرة"
 
 #: js/messages.php:102
-#, fuzzy
 #| msgid "System memory"
 msgid "Cached memory"
-msgstr "ذاكرة النظام"
+msgstr "الذاكرة المؤقتة"
 
 #: js/messages.php:103
 msgid "Buffered memory"
