--- a/po/ar.po
+++ b/po/ar.po
@@ -1340,10 +1340,9 @@ msgid "Change settings"
 msgstr "تغيير الإعدادات"
 
 #: js/messages.php:149
-#, fuzzy
 #| msgid "General relation features"
 msgid "Current settings"
-msgstr "المزايا العامّة للرابط"
+msgstr "الإعدادات الحالية"
 
 #: js/messages.php:151 server_status.php:1467
 #, fuzzy
