--- a/ChangeLog
+++ b/ChangeLog
@@ -48,6 +48,7 @@ phpMyAdmin - ChangeLog
 - bug #3374802 [interface] Comment on a column breaks inline editing
 - bug #3383711 [display] Order by a column in a view doesn't work in some cases
 - bug #3386434 [interface] Add missing space to server status
+- patch #3385954 [interface] "Unknown table status: Create_time" on dispalying view
 
 3.4.4.0 (not yet released)
 - bug #3323060 [parser] SQL parser breaks AJAX requests if query has unclosed quotes
