--- a/ChangeLog
+++ b/ChangeLog
@@ -46,7 +46,7 @@ phpMyAdmin - ChangeLog
 - bug #3375325 [interface] Page list in navigation frame looks odd
 - bug #3313235 [interface] Error div misplaced
 - bug #3374802 [interface] Comment on a column breaks inline editing
-- bug #3383711 [display] Order by a column in a view doesn't work in some cases
+- patch #3383711 [display] Order by a column in a view doesn't work in some cases
 - bug #3386434 [interface] Add missing space to server status
 
 3.4.4.0 (not yet released)
