Translation update done using Pootle.

--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-05 10:53+0200\n"
-"PO-Revision-Date: 2011-08-07 22:26+0200\n"
+"PO-Revision-Date: 2011-08-07 22:28+0200\n"
 "Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -418,7 +418,7 @@ msgstr "Bitte wählen Sie mindestens eine anzuzeigende Spalte"
 #, fuzzy, php-format
 #| msgid "visual builder"
 msgid "Switch to %svisual builder%s"
-msgstr "Wechseln zu %svisual builder%"
+msgstr "Wechseln zu %s visual builder %s"
 
 #: db_qbe.php:222 libraries/db_structure.lib.php:90
 #: libraries/display_tbl.lib.php:939
