Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 15:29+0200\n"
+"PO-Revision-Date: 2011-08-08 15:30+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -567,10 +567,9 @@ msgid "Search in database"
 msgstr "Paieška duomenų bazėje"
 
 #: db_search.php:275
-#, fuzzy
 #| msgid "Word(s) or value(s) to search for (wildcard: \"%\"):"
 msgid "Words or values to search for (wildcard: \"%\"):"
-msgstr "Paieškos žodis(iai) arba reikšmė(ės) (pakaitos simbolis: \"%\"):"
+msgstr "Paieškos žodis(iai) arba reikšmė(ės) (pakaitos simboliui: \"%\"):"
 
 #: db_search.php:280
 msgid "Find:"
