--- a/po/lt.po
+++ b/po/lt.po
@@ -718,10 +718,9 @@ msgid "Add prefix to table"
 msgstr "Pridėti priešdėlį lentelės pavadinimui"
 
 #: db_structure.php:517 libraries/mult_submits.inc.php:251
-#, fuzzy
 #| msgid "Replace table data with file"
 msgid "Replace table prefix"
-msgstr "Pakeisti lentelės turinį failo duomenimis "
+msgstr "Pakeisti lentelės pavadinimo priešdėlį"
 
 #: db_structure.php:519 libraries/mult_submits.inc.php:251
 #, fuzzy
