--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 15:32+0200\n"
+"PO-Revision-Date: 2011-08-08 15:33+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -723,10 +723,9 @@ msgid "Replace table prefix"
 msgstr "Pakeisti lentelės pavadinimo priešdėlį"
 
 #: db_structure.php:519 libraries/mult_submits.inc.php:251
-#, fuzzy
 #| msgid "Replace table data with file"
 msgid "Copy table with prefix"
-msgstr "Pakeisti lentelės turinį failo duomenimis "
+msgstr "Kopijuoti lentelę su pavadinimo priešdėliu"
 
 #: db_structure.php:559 libraries/schema/User_Schema.class.php:382
 msgid "Data Dictionary"
