--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 15:35+0200\n"
+"PO-Revision-Date: 2011-08-08 15:36+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1059,10 +1059,9 @@ msgid "Edit"
 msgstr "Redaguoti"
 
 #: js/messages.php:66 server_status.php:667
-#, fuzzy
 #| msgid "Server Choice"
 msgid "Live traffic chart"
-msgstr "Pasirinkti serverį"
+msgstr "Tiesioginių duomenų srauto diagrama"
 
 #: js/messages.php:67 server_status.php:670
 msgid "Live conn./process chart"
