Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 15:36+0200\n"
+"PO-Revision-Date: 2011-08-08 15:37+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1065,7 +1065,7 @@ msgstr "Tiesioginių duomenų srauto diagrama"
 
 #: js/messages.php:67 server_status.php:670
 msgid "Live conn./process chart"
-msgstr ""
+msgstr "Tiesioginių prisijungimų/procesų diagrama"
 
 #: js/messages.php:68 server_status.php:688
 #, fuzzy
