Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -1087,7 +1087,7 @@ msgstr "Iš viso"
 #. l10n: Other, small valued, queries
 #: js/messages.php:74 server_status.php:873
 msgid "Other"
-msgstr ""
+msgstr "Kita"
 
 #. l10n: Thousands separator
 #: js/messages.php:76 libraries/common.lib.php:1332
