--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 15:42+0200\n"
+"PO-Revision-Date: 2011-08-08 15:43+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1179,7 +1179,7 @@ msgstr "Buferio atmintis"
 
 #: js/messages.php:104
 msgid "Free memory"
-msgstr ""
+msgstr "Laisva atmintis"
 
 #: js/messages.php:105
 msgid "Used memory"
