Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -1199,10 +1199,9 @@ msgid "Used Swap"
 msgstr "Naudojama swap"
 
 #: js/messages.php:110
-#, fuzzy
 #| msgid "Free pages"
 msgid "Free Swap"
-msgstr "Tušti puslapiai"
+msgstr "Laisva Swap"
 
 #: js/messages.php:112
 msgid "Bytes sent"
