--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 15:43+0200\n"
+"PO-Revision-Date: 2011-08-08 15:44+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1205,7 +1205,7 @@ msgstr "Laisva Swap"
 
 #: js/messages.php:112
 msgid "Bytes sent"
-msgstr ""
+msgstr "Išsiųsta baitų"
 
 #: js/messages.php:113
 #, fuzzy
