--- a/po/lt.po
+++ b/po/lt.po
@@ -1233,10 +1233,9 @@ msgid "Settings"
 msgstr "Nustatymai"
 
 #: js/messages.php:121
-#, fuzzy
 #| msgid "Remove database"
 msgid "Remove chart"
-msgstr "Pašalinti duomenų bazę"
+msgstr "Pašalinti diagramą"
 
 #: js/messages.php:122
 msgid "Edit title and labels"
