Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 15:44+0200\n"
+"PO-Revision-Date: 2011-08-08 15:45+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1239,7 +1239,7 @@ msgstr "Pašalinti diagramą"
 
 #: js/messages.php:122
 msgid "Edit title and labels"
-msgstr ""
+msgstr "Keisti pavadinimą ir etiketes"
 
 #: js/messages.php:123
 #, fuzzy
