--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 15:46+0200\n"
+"PO-Revision-Date: 2011-08-08 15:47+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1272,7 +1272,7 @@ msgstr "general_log ir slow_query_log yra įjungti."
 
 #: js/messages.php:131
 msgid "general_log is enabled."
-msgstr ""
+msgstr "general_log įjungtas."
 
 #: js/messages.php:132
 msgid "slow_query_log is enabled."
