--- a/po/lt.po
+++ b/po/lt.po
@@ -1276,7 +1276,7 @@ msgstr "general_log įjungtas."
 
 #: js/messages.php:132
 msgid "slow_query_log is enabled."
-msgstr ""
+msgstr "slow_query_log įjungtas."
 
 #: js/messages.php:133
 msgid "slow_query_log and general_log are disabled."
