--- a/po/lt.po
+++ b/po/lt.po
@@ -1320,10 +1320,10 @@ msgstr "Išsaugoti į failą"
 
 #. l10n: Enable in this context means setting a status variable to ON
 #: js/messages.php:142
-#, fuzzy, php-format
+#, php-format
 #| msgid "Enabled"
 msgid "Enable %s"
-msgstr "Įjungta"
+msgstr "Įjungti %s"
 
 #. l10n: Disable in this context means setting a status variable to OFF
 #: js/messages.php:144
