Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -1327,10 +1327,10 @@ msgstr "Įjungti %s"
 
 #. l10n: Disable in this context means setting a status variable to OFF
 #: js/messages.php:144
-#, fuzzy, php-format
+#, php-format
 #| msgid "Disabled"
 msgid "Disable %s"
-msgstr "Išjungta"
+msgstr "Išjungti %s"
 
 #. l10n: %d seconds
 #: js/messages.php:146
