--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-08 10:07+0200\n"
-"PO-Revision-Date: 2011-08-08 15:54+0200\n"
+"PO-Revision-Date: 2011-08-08 15:55+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1712,10 +1712,9 @@ msgid ", latest stable version:"
 msgstr ", naujausia stabili versija:"
 
 #: js/messages.php:269
-#, fuzzy
 #| msgid "Jump to database"
 msgid "up to date"
-msgstr "Eiti į duomenų bazę"
+msgstr "naujausias"
 
 #. l10n: Display text for calendar close link
 #: js/messages.php:287
